--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <title>Colored blocks</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="body">
-  <div class="red div"></div>
-  <div class="green div"></div>
-  <div class="blue div"></div>
+<body class="clear-field">
+  <div class="red lane"></div>
+  <div class="green lane"></div>
+  <div class="blue lane"></div>
 </body>
 </html>
